--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/button": "2.0.21",
+    "@nextui-org/card": "^2.0.21",
     "@nextui-org/code": "2.0.19",
     "@nextui-org/input": "2.1.9",
     "@nextui-org/kbd": "2.0.20",
@@ -18,6 +19,7 @@
     "@nextui-org/snippet": "2.0.25",
     "@nextui-org/switch": "2.0.21",
     "@nextui-org/system": "2.0.10",
+    "@nextui-org/tabs": "^2.0.21",
     "@nextui-org/theme": "2.1.9",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.4",
@@ -30,6 +32,7 @@
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
     "intl-messageformat": "^10.5.3",
+    "keen-slider": "^6.8.6",
     "next": "13.5.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
