--- a/package.json
+++ b/package.json
@@ -1,42 +1,50 @@
 {
-  "name": "next-app-template",
+  "name": "gari-chai",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
-    "@nextui-org/button": "2.0.18",
-    "@nextui-org/code": "2.0.16",
-    "@nextui-org/input": "2.1.6",
-    "@nextui-org/kbd": "2.0.17",
-    "@nextui-org/link": "2.0.19",
-    "@nextui-org/navbar": "2.0.19",
-    "@nextui-org/snippet": "2.0.22",
-    "@nextui-org/switch": "2.0.18",
-    "@nextui-org/system": "2.0.7",
-    "@nextui-org/theme": "2.1.6",
-    "@react-aria/ssr": "^3.7.1",
-    "@react-aria/visually-hidden": "^3.8.3",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "@nextui-org/button": "2.0.21",
+    "@nextui-org/card": "^2.0.21",
+    "@nextui-org/dropdown": "^2.1.10",
+    "@nextui-org/input": "2.1.9",
+    "@nextui-org/link": "2.0.22",
+    "@nextui-org/navbar": "2.0.22",
+    "@nextui-org/select": "^2.1.11",
+    "@nextui-org/switch": "2.0.21",
+    "@nextui-org/system": "2.0.10",
+    "@nextui-org/tabs": "^2.0.21",
+    "@nextui-org/theme": "2.1.9",
+    "@react-aria/ssr": "^3.8.0",
+    "@react-aria/visually-hidden": "^3.8.5",
+    "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.2",
-    "intl-messageformat": "^10.5.0",
-    "next": "13.4.19",
+    "framer-motion": "^10.16.4",
+    "intl-messageformat": "^10.5.3",
+    "keen-slider": "^6.8.6",
+    "lucide-react": "^0.284.0",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
+    "next": "13.5.4",
+    "postcss": "8.4.30",
     "react-dom": "18.2.0",
-    "tailwind-variants": "^0.1.13",
+    "react-select": "^5.7.7",
+    "react": "18.2.0",
+    "tailwind-variants": "^0.1.14"
+  },
+  "devDependencies": {
+    "@types/node": "20.8.4",
+    "@types/react-dom": "18.2.13",
+    "@types/react": "18.2.28",
+    "eslint-config-next": "13.5.3",
+    "eslint": "8.50.0",
+    "prettier-plugin-tailwindcss": "^0.5.5",
+    "prettier": "^3.0.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.0.4"
+    "typescript": "5.2.2"
   }
 }
