--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.7",
-    "tailwind-variants": "^0.1.14"
+    "tailwind-variants": "^0.1.14",
+    "valtio": "^1.11.2"
   },
   "devDependencies": {
     "@types/node": "20.8.4",
