--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.7",
+    "sharp": "^0.32.6",
+    "sonner": "^1.0.3",
     "tailwind-variants": "^0.1.14",
-    "valtio": "^1.11.2"
+    "valtio": "^1.11.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.8.4",
