add: revalidate tag with array of tags

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 REVALIDATE_SECRET=45580d7a9dd51cce8fa7e76f9b5c859d
+
+ALLOWED_ORIGIN_1=https://gari-chai-admin.vercel.app
+ALLOWED_ORIGIN_2=http://localhost:8080
+DEFAULT_ALLOWED_ORIGIN=${ALLOWED_ORIGIN_1}
