--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start"
   },
@@ -28,7 +28,7 @@
     "intl-messageformat": "^10.5.3",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.284.0",
-    "next": "13.5.4",
+    "next": "14.0.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -37,18 +37,18 @@
     "sharp": "^0.32.6",
     "sonner": "^1.0.3",
     "tailwind-variants": "^0.1.14",
-    "valtio": "^1.11.2",
+    "valtio": "^1.11.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "20.8.4",
-    "@types/react": "18.2.28",
-    "@types/react-dom": "18.2.13",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.3",
+    "@types/node": "20.8.10",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "eslint": "8.52.0",
+    "eslint-config-next": "14.0.1",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.5",
-    "tailwindcss": "3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
   }
 }
