--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@nextui-org/button": "2.0.22",
-    "@nextui-org/card": "^2.0.22",
-    "@nextui-org/dropdown": "^2.1.11",
-    "@nextui-org/input": "2.1.10",
-    "@nextui-org/link": "2.0.23",
-    "@nextui-org/navbar": "2.0.23",
-    "@nextui-org/select": "^2.1.12",
-    "@nextui-org/switch": "2.0.22",
-    "@nextui-org/system": "2.0.11",
-    "@nextui-org/tabs": "^2.0.22",
-    "@nextui-org/theme": "2.1.10",
+    "@nextui-org/accordion": "^2.0.25",
+    "@nextui-org/button": "2.0.23",
+    "@nextui-org/card": "^2.0.23",
+    "@nextui-org/dropdown": "^2.1.12",
+    "@nextui-org/input": "2.1.12",
+    "@nextui-org/link": "2.0.24",
+    "@nextui-org/navbar": "2.0.24",
+    "@nextui-org/select": "^2.1.15",
+    "@nextui-org/switch": "2.0.23",
+    "@nextui-org/system": "2.0.12",
+    "@nextui-org/tabs": "^2.0.23",
+    "@nextui-org/theme": "2.1.12",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.5",
     "autoprefixer": "10.4.16",
