--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/accordion": "^2.0.25",
+    "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "2.0.23",
     "@nextui-org/card": "^2.0.23",
     "@nextui-org/dropdown": "^2.1.12",
@@ -29,7 +30,7 @@
     "intl-messageformat": "^10.5.3",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.284.0",
-    "next": "14.0.1",
+    "next": "14.0.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -42,12 +43,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@redux-devtools/extension": "^3.2.5",
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "eslint": "8.52.0",
-    "eslint-config-next": "14.0.1",
+    "@redux-devtools/extension": "^3.2.6",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "tailwindcss": "3.3.5",
