--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@nextui-org/accordion": "^2.0.25",
     "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "2.0.23",
@@ -29,12 +30,14 @@
     "framer-motion": "^10.16.4",
     "intl-messageformat": "^10.5.3",
     "keen-slider": "^6.8.6",
+    "libphonenumber-js": "^1.10.49",
     "lucide-react": "^0.284.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-select": "^5.7.7",
     "sharp": "^0.32.6",
     "sonner": "^1.1.0",
