--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@nextui-org/dropdown": "^2.1.12",
     "@nextui-org/input": "2.1.12",
     "@nextui-org/link": "2.0.24",
+    "@nextui-org/modal": "^2.0.28",
     "@nextui-org/navbar": "2.0.24",
+    "@nextui-org/react": "^2.2.9",
     "@nextui-org/select": "^2.1.15",
     "@nextui-org/switch": "2.0.23",
     "@nextui-org/system": "2.0.12",
@@ -36,6 +38,7 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-select": "^5.7.7",
