--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-aria/visually-hidden": "^3.8.5",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
     "intl-messageformat": "^10.5.3",
     "keen-slider": "^6.8.6",
