--- a/package.json
+++ b/package.json
@@ -27,9 +27,16 @@
     "@nextui-org/theme": "2.1.12",
     "@react-aria/ssr": "^3.9.0",
     "@react-aria/visually-hidden": "^3.8.7",
+    "@tiptap/extension-highlight": "^2.1.12",
+    "@tiptap/extension-placeholder": "^2.1.12",
+    "@tiptap/extension-typography": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
+    "debounce": "^2.0.0",
     "framer-motion": "^10.16.5",
     "keen-slider": "^6.8.6",
     "libphonenumber-js": "^1.10.49",
