--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "2.0.23",
     "@nextui-org/card": "^2.0.24",
+    "@nextui-org/divider": "^2.0.25",
     "@nextui-org/dropdown": "^2.1.16",
     "@nextui-org/input": "2.1.12",
     "@nextui-org/link": "2.0.24",
@@ -38,6 +39,7 @@
     "dayjs": "^1.11.10",
     "debounce": "^2.0.0",
     "framer-motion": "^10.16.5",
+    "html-react-parser": "^5.0.6",
     "keen-slider": "^6.8.6",
     "libphonenumber-js": "^1.10.49",
     "lucide-react": "^0.284.0",
