--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/link": "2.0.24",
     "@nextui-org/modal": "^2.0.28",
     "@nextui-org/navbar": "2.0.24",
+    "@nextui-org/pagination": "^2.0.26",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/select": "^2.1.20",
     "@nextui-org/switch": "2.0.23",
