--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tiptap/starter-kit": "^2.1.12",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
+    "css-mediaquery": "^0.1.2",
     "dayjs": "^1.11.10",
     "debounce": "^2.0.0",
     "framer-motion": "^10.16.5",
@@ -51,15 +52,18 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0",
     "sharp": "^0.32.6",
     "sonner": "^1.2.0",
+    "tailwind-merge": "^2.1.0",
     "tailwind-variants": "^0.1.18",
     "valtio": "^1.12.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@redux-devtools/extension": "^3.2.6",
+    "@types/css-mediaquery": "^0.1.4",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
