--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/pm": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "@vercel/speed-insights": "^1.0.1",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
