--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "2.0.23",
     "@nextui-org/card": "^2.0.24",
+    "@nextui-org/chip": "^2.0.25",
     "@nextui-org/divider": "^2.0.25",
     "@nextui-org/dropdown": "^2.1.16",
     "@nextui-org/input": "2.1.12",
