--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nextui-org/pagination": "^2.0.26",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/select": "^2.1.20",
+    "@nextui-org/slider": "^2.2.5",
     "@nextui-org/switch": "2.0.23",
     "@nextui-org/system": "2.0.12",
     "@nextui-org/tabs": "^2.0.26",
