add: register user with email and phone and sync user info

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "cSpell.words": ["frontpage", "Gari", "Lucide", "msrc", "Nexon"],
+  "cSpell.words": ["frontpage", "Gari", "Lucide", "msrc", "Nexon", "Signup"],
   "tailwindCSS.experimental.classRegex": ["class:\\s*?[\"'`]([^\"'`]*).*?,"]
 }
