--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nextui-org/modal": "^2.0.28",
     "@nextui-org/navbar": "2.0.24",
     "@nextui-org/pagination": "^2.0.26",
+    "@nextui-org/radio": "^2.0.25",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/select": "^2.1.20",
     "@nextui-org/slider": "^2.2.5",
