--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "2.0.23",
     "@nextui-org/card": "^2.0.24",
+    "@nextui-org/checkbox": "^2.0.25",
     "@nextui-org/chip": "^2.0.25",
     "@nextui-org/divider": "^2.0.25",
     "@nextui-org/dropdown": "^2.1.16",
