--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
     "react-photoswipe-gallery": "^3.0.1",
+    "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.21",
     "react-select": "^5.8.0",
     "sharp": "^0.33.2",
