--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nextui-org/radio": "^2.0.25",
     "@nextui-org/react": "^2.2.9",
     "@nextui-org/select": "^2.1.20",
+    "@nextui-org/skeleton": "^2.0.24",
     "@nextui-org/slider": "^2.2.5",
     "@nextui-org/spinner": "^2.0.24",
     "@nextui-org/switch": "2.0.23",
