--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-player": "^2.14.1",
     "react-responsive-carousel": "^3.2.21",
     "react-select": "^5.8.0",
+    "react-simple-star-rating": "^5.1.7",
     "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
