update env example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 REVALIDATE_SECRET=
 
-ALLOWED_ORIGIN_1=
-ALLOWED_ORIGIN_2=
-DEFAULT_ALLOWED_ORIGIN=
+ALLOWED_ORIGIN_1=LOCAL_OR_STG_URL
+ALLOWED_ORIGIN_2=LOCAL_ADMIN_URL
+ALLOWED_ORIGIN_3=LIVE_ADMIN_URL
+
+DEFAULT_ALLOWED_ORIGIN=${ALLOWED_ORIGIN_3}
