--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "@nextui-org/accordion": "^2.0.28",
-    "@nextui-org/avatar": "^2.0.24",
+    "@hookform/resolvers": "^3.6.0",
+    "@nextui-org/accordion": "^2.0.34",
+    "@nextui-org/avatar": "^2.0.29",
     "@nextui-org/button": "2.0.23",
-    "@nextui-org/card": "^2.0.24",
-    "@nextui-org/checkbox": "^2.0.25",
-    "@nextui-org/chip": "^2.0.25",
-    "@nextui-org/divider": "^2.0.25",
-    "@nextui-org/dropdown": "^2.1.16",
-    "@nextui-org/input": "2.1.12",
-    "@nextui-org/link": "2.0.24",
-    "@nextui-org/modal": "^2.0.28",
-    "@nextui-org/navbar": "2.0.24",
-    "@nextui-org/pagination": "^2.0.26",
-    "@nextui-org/radio": "^2.0.25",
-    "@nextui-org/react": "^2.2.9",
-    "@nextui-org/select": "^2.1.20",
-    "@nextui-org/skeleton": "^2.0.24",
-    "@nextui-org/slider": "^2.2.5",
-    "@nextui-org/spinner": "^2.0.24",
-    "@nextui-org/switch": "2.0.23",
-    "@nextui-org/system": "2.0.12",
-    "@nextui-org/tabs": "^2.0.26",
-    "@nextui-org/theme": "2.1.17",
-    "@react-aria/ssr": "^3.9.1",
-    "@react-aria/visually-hidden": "^3.8.8",
+    "@nextui-org/card": "^2.0.30",
+    "@nextui-org/checkbox": "^2.1.1",
+    "@nextui-org/chip": "^2.0.29",
+    "@nextui-org/divider": "^2.0.28",
+    "@nextui-org/dropdown": "^2.1.25",
+    "@nextui-org/input": "2.2.1",
+    "@nextui-org/link": "2.0.31",
+    "@nextui-org/modal": "^2.0.35",
+    "@nextui-org/navbar": "2.0.32",
+    "@nextui-org/pagination": "^2.0.32",
+    "@nextui-org/radio": "^2.1.1",
+    "@nextui-org/react": "^2.4.1",
+    "@nextui-org/select": "^2.2.1",
+    "@nextui-org/skeleton": "^2.0.28",
+    "@nextui-org/slider": "^2.2.11",
+    "@nextui-org/spinner": "^2.0.29",
+    "@nextui-org/switch": "2.0.30",
+    "@nextui-org/system": "2.2.1",
+    "@nextui-org/tabs": "^2.0.31",
+    "@nextui-org/theme": "2.2.5",
+    "@react-aria/ssr": "^3.9.4",
+    "@react-aria/visually-hidden": "^3.8.12",
     "@tiptap/extension-highlight": "^2.1.12",
     "@tiptap/extension-placeholder": "^2.1.12",
     "@tiptap/extension-typography": "^2.1.12",
@@ -43,45 +43,45 @@
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "@vercel/speed-insights": "^1.0.2",
-    "autoprefixer": "10.4.17",
-    "clsx": "^2.1.0",
-    "dayjs": "^1.11.10",
-    "debounce": "^2.0.0",
+    "autoprefixer": "10.4.19",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
+    "debounce": "^2.1.0",
     "framer-motion": "^10.17.9",
-    "html-react-parser": "^5.0.11",
+    "html-react-parser": "^5.1.10",
     "keen-slider": "^6.8.6",
-    "libphonenumber-js": "^1.10.53",
-    "lucide-react": "^0.306.0",
-    "next": "14.1.0",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.33",
-    "react": "18.2.0",
+    "libphonenumber-js": "^1.11.3",
+    "lucide-react": "^0.394.0",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
+    "postcss": "8.4.38",
+    "react": "18.3.1",
     "react-countdown": "^2.3.5",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
     "react-photoswipe-gallery": "^3.0.1",
     "react-player": "^2.14.1",
-    "react-responsive-carousel": "^3.2.21",
+    "react-responsive-carousel": "~3.2.21",
     "react-select": "^5.8.0",
     "react-simple-star-rating": "^5.1.7",
-    "sharp": "^0.33.2",
-    "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.0",
-    "tailwind-variants": "^0.1.20",
-    "valtio": "^1.13.0",
-    "zod": "^3.22.4"
+    "sharp": "^0.33.4",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwind-variants": "^0.2.1",
+    "valtio": "^1.13.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@redux-devtools/extension": "^3.2.6",
-    "@types/node": "20.10.6",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "3.4.1",
+    "@redux-devtools/extension": "^3.3.0",
+    "@types/node": "20.14.2",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.4",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.4",
+    "tailwindcss": "3.4.4",
     "typescript": "5.3.3"
   }
 }
