--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "keen-slider": "^6.8.6",
     "libphonenumber-js": "^1.11.3",
     "lucide-react": "^0.394.0",
+    "motion": "^11.11.17",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "postcss": "8.4.38",
